# ladybird

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: nightly-windows.yml
AK/: Assertions.cpp  Assertions.h  CMakeLists.txt  DistinctNumeric.h  Format.cpp  Time.h  Utf8GenericLexer.cpp  Utf8View.h
Libraries/: CMakeLists.txt
Libraries/LibCore/: CMakeLists.txt  EventLoopImplementationWindows.cpp  File.cpp  FileWatcher.h  FileWatcherWindows.cpp  SystemWindows.cpp  TimeZoneWatcherWindows.cpp
Libraries/LibGfx/: CMakeLists.txt  PaintingSurface.cpp  PaintingSurface.h  SkiaBackendContext.cpp  SkiaBackendContext.h
Libraries/LibIDL/: IDLParser.cpp
Libraries/LibIPC/: Connection.cpp
Libraries/LibJS/: AST.h  CMakeLists.txt  Lexer.h  Module.h  SyntaxHighlighter.h  Token.h
Libraries/LibJS/Bytecode/: Generator.h  Op.h  RegexTable.h  StringTable.h
Libraries/LibJS/Runtime/: AbstractOperations.h  DeclarativeEnvironment.h  Error.h  GlobalObject.h  Reference.h  Shape.h  StringPrototype.h  TypedArray.h
Libraries/LibRegex/: CMakeLists.txt  RegexByteCode.h
Libraries/LibRequests/: Request.cpp
Libraries/LibTest/: AssertionHandler.h  CMakeLists.txt
Libraries/LibWGSL/: CMakeLists.txt  Lexer.cpp  Lexer.h
Libraries/LibWeb/: CMakeLists.txt  Dump.h  Forward.h  PixelUnits.h  TreeNode.h  idl_files.cmake
Libraries/LibWeb/ARIA/: ARIAMixin.h  AriaData.h  RoleType.h  Roles.h  StateAndProperties.h
Libraries/LibWeb/Animations/: Animatable.h  Animation.h  AnimationEffect.h  AnimationPlaybackEvent.h  AnimationTimeline.h  DocumentTimeline.h  KeyframeEffect.h  PseudoElementParsing.h
Libraries/LibWeb/Bindings/: AudioConstructor.h  HostDefined.h  ImageConstructor.h  Intrinsics.h  MainThreadVM.h  OptionConstructor.h  PlatformObject.h  PrincipalHostDefined.h  Serializable.h  SyntheticHostDefined.h  Transferable.h
Libraries/LibWeb/CSS/: Angle.h  AnimationEvent.h  BooleanExpression.h  CSS.h  CSSAnimation.h  CSSConditionRule.h  CSSDescriptors.h  CSSFontFaceDescriptors.h  CSSFontFaceRule.h  CSSGroupingRule.h  CSSImportRule.h  CSSKeyframeRule.h  CSSKeyframesRule.h  CSSLayerBlockRule.h  CSSLayerStatementRule.h  CSSMarginRule.h  CSSMediaRule.h  CSSNamespaceRule.h  CSSNestedDeclarations.h  CSSNumericType.h  CSSPageDescriptors.h  CSSPageRule.h  CSSPropertyRule.h  CSSRule.h  CSSRuleList.h  CSSStyleDeclaration.h  CSSStyleProperties.h  CSSStyleRule.h  CSSStyleSheet.h  CSSStyleValue.h  CSSSupportsRule.h  CSSTransition.h  CalculatedOr.h  CascadedProperties.h  Clip.h  ComputedProperties.h  CountersSet.h  Descriptor.h  Display.h  EdgeRect.h  (+43 more)
Libraries/LibWeb/Clipboard/: Clipboard.h  ClipboardEvent.h  ClipboardItem.h
Libraries/LibWeb/Compression/: CompressionStream.h  DecompressionStream.h
Libraries/LibWeb/ContentSecurityPolicy/: BlockingAlgorithms.h  Policy.h  PolicyList.h  SecurityPolicyViolationEvent.h  Violation.h
Libraries/LibWeb/Cookie/: Cookie.h  ParsedCookie.h
Libraries/LibWeb/CredentialManagement/: Credential.h  CredentialsContainer.h  FederatedCredential.h  PasswordCredential.h
Libraries/LibWeb/Crypto/: Crypto.h  CryptoAlgorithms.h  CryptoBindings.h  CryptoKey.h  KeyAlgorithms.h  SubtleCrypto.h
Libraries/LibWeb/DOM/: AbortController.h  AbortSignal.h  AbstractElement.h  AbstractRange.h  AccessibilityTreeNode.h  AdoptedStyleSheets.h  Attr.h  CDATASection.h  CharacterData.h  Comment.h  CustomEvent.h  DOMEventListener.h  DOMImplementation.h  DOMTokenList.h  Document.h  DocumentFragment.h  DocumentLoadEventDelayer.h  DocumentLoading.h  DocumentObserver.h  DocumentType.h  Element.cpp  (+36 more)
Libraries/LibWeb/WebGPU/Native/: CMakeLists.txt  GPU.h  GPUAdapter.h  GPUDevice.h
Libraries/LibWeb/WebGPU/Native/Stub/: CMakeLists.txt  GPUAdapter.cpp  GPUAdapter.h  GPUInstance.cpp  GPUInstance.h
Libraries/LibWeb/WebGPU/Native/WGPU/: .gitignore  CMakeLists.txt  GPUAdapter.cpp  GPUAdapter.h  GPUDevice.cpp  GPUDevice.h  GPUInstance.cpp  GPUInstance.h  GPUSurface.cpp  GPUSurface.h
Libraries/LibWebGPUNative/: Adapter.h  Buffer.h  CMakeLists.txt  CommandBuffer.h  CommandEncoder.h  Device.h  Instance.h  Queue.h  RenderPassEncoder.h  RenderPipeline.h  ShaderModule.h  Texture.h  TextureView.h
Libraries/LibWebGPUNative/DirectX/: Buffer.cpp  BufferImpl.cpp  BufferImpl.h  CommandEncoderImpl.cpp  Device.cpp  DeviceImpl.cpp  DeviceImpl.h  Instance.cpp  Queue.cpp  QueueImpl.cpp  QueueImpl.h  RenderPassEncoder.cpp  RenderPassEncoderImpl.cpp  RenderPassEncoderImpl.h  RenderPipeline.cpp  RenderPipelineImpl.cpp  RenderPipelineImpl.h  ShaderModule.cpp  ShaderModuleImpl.cpp  ShaderModuleImpl.h  TextureImpl.cpp
Libraries/LibWebGPUNative/Metal/: Adapter.cpp  AdapterImpl.h  AdapterImpl.mm  Device.cpp  Error.h  Instance.cpp
Libraries/LibWebGPUNative/Vulkan/: Error.h  Instance.cpp  InstanceImpl.cpp  InstanceImpl.h
Libraries/LibWebView/: Application.cpp  Application.h  BrowserProcess.cpp  CMakeLists.txt  Process.cpp  TimeZoneWatcher.h
Meta/: ladybird.py
Meta/CMake/: all_the_debug_macros.cmake  common_options.cmake  lagom_options.cmake  utils.cmake  vulkan.cmake
Meta/Lagom/: CMakeLists.txt
Services/: CMakeLists.txt
Services/RequestServer/: ConnectionFromClient.cpp
Services/WebContent/: CMakeLists.txt  ConnectionFromClient.cpp  PageClient.cpp
Services/WebWorker/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/AK/: CMakeLists.txt  TestUtf8GenericLexer.cpp
Tests/LibCore/: CMakeLists.txt  TestLibCoreFileWatcher.cpp  TestTimeZoneWatcher.cpp
Tests/LibGfx/: CMakeLists.txt
Tests/LibWGSL/: TestWGSLLexer.cpp
Tests/LibWeb/: CMakeLists.txt  TestConfig.ini
Tests/LibWeb/test-web/: CMakeLists.txt  Fixture.cpp  TestWebView.cpp  main.cpp
Tests/LibWebGPUNative/: CMakeLists.txt  TestWebGPUNative.cpp
UI/: CMakeLists.txt
UI/Qt/: Application.cpp  BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt
UI/WinUI/: App.xaml  App.xaml.cpp  App.xaml.cs  App.xaml.h  Ladybird.csproj  Ladybird.sln  Ladybird.vcxproj  Ladybird.vcxproj.filters  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.cs  MainWindow.xaml.h  Package.appxmanifest  app.manifest  readme.txt
Utilities/: test262-runner.cpp
(+847 files in other folders)
