target_sources(LibWeb
    PRIVATE
        GPUInstance.h
        GPUInstance.cpp
        #GPUAdapter.h
        #GPUAdapter.cpp
        #GPUDevice.h
        #GPUDevice.cpp
)
target_include_directories(LibWeb
    PRIVATE
        "${CMAKE_CURRENT_SOURCE_DIR}/webgpu/include" 
)
target_link_directories(LibWeb
    PRIVATE
        "${CMAKE_CURRENT_SOURCE_DIR}/webgpu/lib"
)
target_link_libraries(LibWeb
    PRIVATE
        libwgpu_native.so
)
